2003-06-04  mput <root@mput.dip.jp>

	* Makefile.am (dist-hook): Bug fix
	* configure.in, autoconf/Makefile.boot: modernize

2003-06-02  mput <root@mput.dip.jp>

	* bootstrap.sh: Fix to use make
	* configure.in: Fix to fit the adding files
	* autoconf/Makefile.am, autoconf/Makefile.boot,
	  autoconf/Makefile.in, configs/Makefile.am, configs/Makefile.in:
	  Add.

2003-06-01  Eric A. Welsh <ewelsh@ccb.wustl.edu>

	* timidity/effect.c (do_effect): Do not do reverb or chorus if
	  do_compute_data_midi() has already applied them with
	  USE_DSP_EFFECT.

	* timidity/playmidi.c (new_chorus_voice_alternate): opt_surround
	  update to work with the new effects
	(adjust_panning): Hack to handle -EFchorus=2 in a "reasonable" way

2003-05-30  Kentaro Sato <kentaro@ps.catv.ne.jp>

	* timidity/resample.c, recache.c:
	 Fix LAGRANGE_INTERPOLATION for uint32.

2003-05-30  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/playmidi.c, timidity/reverb.[ch], timidity/timidity.[ch]:
	  Support for command line option below.
	  -E e/E : Enable/Disable modulation envelope.
	  -EFreverb=3 : Enable NEW MIDI reverb effect control (freeverb)
	                This effect is only available in stereo
	  Rename NEW_CHORUS as USE_DSP_EFFECT.

2003-05-30  Saito <timidity@flashmail.com>

	* timidity/sndfont.c:
	  Fix around set_rootkey().

2003-05-29  Eric A. Welsh <ewelsh@ccb.wustl.edu>

	* timidity/timidity.h (DEFAULT_VOICES): to 256 (was 64)
	* timidity/playmidi.c (do_compute_data_midi):
	  Fix -EFchorus option interpretation

2003-05-29  Kentaro Sato <kentaro@ps.catv.ne.jp>

	* timidity/resample.c:
	  Fasten initialize_gauss_table().

2003-05-28  Eric A. Welsh <ewelsh@ccb.wustl.edu>

	* timidity/readmidi.c (parse_sysex_event_multi):
	  Fix XG Bulk Dump SysEx event parsing

2003-05-28  Saito <timidity@flashmail.com>

	* timidity/playmidi.c, timidity/reverb.c:
	  Fix a little.

2003-05-27  Saito <timidity@flashmail.com>

	* timidity/playmidi.c:
	  Bug fix in opt_realtime_playing != 2.